<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">

    <string name="app_name">Tvoard</string>

    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="ok">OK</string>
    <string name="error">Error: %s</string>

    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="settings">settings</string>
    <string name="general_settings">general</string>
    <string name="language">language</string>
    <string name="keyboard_language">Keyboard language</string>
    <string name="translation_english">English</string>
    <string name="keyboard_height">Keyboard height</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="change_keyboard">Change Keyboard</string>
    <string name="app_launcher_name">Keyboard_debug</string>>
    <string name="about">About</string>>

    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="vibrate_on_button_press">Vibrate on button press</string>
    <string name="show_key_borders">Show key borders</string>
    <string name="show_numbers_row">Show numbers on a separate row</string>
    <string name="show_popup">Show a popup on keypress</string>


    <!-- KeyboardView - accessibility support -->
    <!-- Description of the Alt button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardView_keycode_alt">Alt</string>
    <!-- Description of the Cancel button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardView_keycode_cancel">Cancel</string>
    <!-- Description of the Delete button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardView_keycode_delete">Delete</string>
    <!-- Description of the Done button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardView_keycode_done">Done</string>
    <!-- Description of the Mode change button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardView_keycode_mode_change">Mode change</string>
    <!-- Description of the Shift button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardView_keycode_shift">Shift</string>
    <!-- Description of the Enter button in a KeyboardView. [CHAR LIMIT=NONE] -->
    <string name="keyboardView_keycode_enter">Enter</string>
</resources>
