<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="@string/settings"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/settings_nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/settings_general_settings_label"
            style="@style/SettingsSectionLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_settings" />

        <LinearLayout
            android:id="@+id/settings_general_settings_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/settings_language_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.example.tvoard.keyboard.MyTextView
                    android:id="@+id/settings_language_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language" />

                <org.example.tvoard.keyboard.MyTextView
                    android:id="@+id/settings_language"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_language_label"
                    tools:text="English" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_keyboard_language_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.example.tvoard.keyboard.MyTextView
                    android:id="@+id/settings_keyboard_language_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyboard_language" />

                <org.example.tvoard.keyboard.MyTextView
                    android:id="@+id/settings_keyboard_language"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_keyboard_language_label"
                    tools:text="@string/translation_english" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_keyboard_height_multiplier_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.example.tvoard.keyboard.MyTextView
                    android:id="@+id/settings_keyboard_height_multiplier_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyboard_height" />

                <org.example.tvoard.keyboard.MyTextView
                    android:id="@+id/settings_keyboard_height_multiplier"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_keyboard_height_multiplier_label"
                    tools:text="@string/small" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
